<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="16dp"
    android:elevation="6dp"
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text.Title.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:layout_marginBottom="5dp"
                style="@style/Text.Title.Middle"
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Дзеожинского 24" />

            <TextView
                style="@style/Text.Title.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <TextView
                style="@style/Text.Title.Middle"
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+7-999-99-99" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Text.Title.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_delivery" />

            <TextView
                style="@style/Text.Title.Middle"
                android:id="@+id/plan_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="+7-999-99-99" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="Доставить"
        style="@style/Text.Title.Button"
        android:layout_gravity="end|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.cardview.widget.CardView>